@@ -1,1 +1,1 @@
-{"name":"transactions","description":"Flow to run financial transactions.","version":"202304050055","folder":"System/Automate/transactions","comment":".","uri":"content://com.llamalab.automate.provider/flows/16/data"}
+{"name":"transactions","description":"Flow to run financial transactions.","version":"202304050941","folder":"System/Automate/transactions","comment":"Removed ;xmlEncode from variables in transaction screen","uri":"content://com.llamalab.automate.provider/flows/16/data"}
