@@ -1,0 +1,20 @@
+[
+        "🏦 Income",
+        "🛒 Expenses",
+        "disabled",
+        "Revolut Current",
+        "N26 Current",
+        "Vivid Current",
+        "Vivid Subscriptions",
+        "Vivid Monthly",
+        "FNB Cheque",
+        "💶 Cash",
+        "disabled",
+        "Lyxor Pan Africa UCITS",
+        "Coronation Global Managed",
+        "Nedgroup Global Equity",
+        "Satrix World Equity",
+        "Lyxor Europe 600",
+        "Lyxor World",
+        "iShares Emerging Markets"
+]
