@@ -1,1 +1,1 @@
-<meta charset='UTF-8'><meta name='viewport' content='width=device-width'><link rel='preconnect' href='https://fonts.googleapis.com'><link rel='preconnect' href='https://fonts.gstatic.com' crossorigin><link href='https://fonts.googleapis.com/css2?family=Overpass:wght@400;700;900&display=swap' rel='stylesheet'><style>body \{ color: #323036; font-family: 'Overpass', sans-serif} form \{ text-align: center} div.container \{ position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%); padding: 0 10px} select \{ border: none; outline: none; background-color: transparent; -moz-appearance: none; -webkit-appearance: none} select:focus \{ border: none; outline: none} input \{ font-weight: 700; font-size: 1em; background-color: transparent; border: none; text-align: center; float: left; width: 80%; -moz-appearance: none; -webkit-appearance: none} input:focus \{ outline: none} input::-webkit-calendar-picker-indicator \{ display: none !important;} dov.accounts \{ text-align: center} div.accounts>div>select \{ font-weight: 900 !important; font-size: 1em; padding-bottom: 0.5em;} div.accounts>div[class^='account'] \{ width: 45%; display: inline-block} div.meta \{ width: 100%} div.meta>div.location>input \{ float: none; font-weight: 400 !important; font-size: 0.9em; text-align: center; padding-bottom: 10px} div.meta>span select, div.meta>span input \{ float: none; font-weight: 400 !important; font-size: 1.2em; width: 45%} div.brand input, div.item input \{ font-size: 1.5em; font-weight: 700; text-align: left; border-bottom: 0.5px solid #E6E6E6; width: 100%} div.quantity \{ width: 100%; margin-bottom: 0.8em; text-align: right} div.quantity>span input#quantity \{ float: none; sans-serif; font-weight: 400 !important; font-size: 1.2em; text-align: right; width: 80%} div.quantity>span span.quantityUnit \{ float: left; width: 20%; font-size: 0.8em} div.costs \{ width: 100%; text-align: right} div.costs>span span.currency \{ float: left; width: 20%} div.costs>span span.currency select \{ font-weight: 900; font-size: 1em} div.costs>span input#amount \{ float: none; sans-serif; font-weight: 900 !important; font-size: 4em; text-align: right; width: 80%; padding-bottom: 10px}</style><body><div class='container'><form method='get' action='http://localhost/ok' name='transactions'><div class='wrapper'><div class='accounts'><div class='accountFrom'><select name='accountFrom' id='accountFrom' size='1' style='text-align:right' required><option value='Revolut Current' selected>Revolut Current </option>{transactionLists["currency"];xmlEncode} </select></div>&nbsp;|&nbsp; <div class='accountTo'><select name='accountTo' id='accountTo' size='1' style='text-align:left' required><option value='Expenses' selected>Expenses</option>{transactionLists["currency"];xmlEncode} </select></div></div><br><br><div class='meta'><div class='location'>📍 <input type='text' name='location' id='location' value='{location;xmlEncode}' required><br>📅 <select name='frequency' id='frequency' size='1' style='font-size:small; font-weight: 700'><option value='Once Off' selected>Once off</option>{transactionLists["frequency"];xmlEncode} </select></div><br><span class='type' style='padding-right: 10px'><select name='type' id='type' size='1' style='text-align: right' required><option value='Food' selected>🍽 Food</option>{transactionLists["category"];xmlEncode} </select></span><span>:</span><span class='group' style='padding-left: 10px'><datalist id='subcat'>{transactionLists["subcategory"];xmlEncode} </datalist><input type='text' id='group' name='group' size='3' placeholder='Enter group...' style='text-align: left' autocomplete='off' required /></span></div><br><br><div class='brand'><input type='text' name='brand' id='brand' placeholder='Brand' required></div><br><br><br><div class='item'><input type='text' name='item' id='item' placeholder='Item Name' required></div><br><br><br><div class='quantity'><span class='quantityNumber'><input type='number' id='quantity' step='.01' name='quantity' min='0.01' placeholder='0.00' required></span><span class='quantityUnit'><select name='quantityUnit' size='1' required><option value='x' selected>x</option>{transactionLists["quantityUnit"];xmlEncode} </select></span></div><div class='costs'><span class='currency'><select name='currency' id='currency' size='1'><option value='EUR' selected>🇪🇺 EUR</option>\{transactionLists["currency"];xmlEncode} </select></span><span class='amount'><input type='number' id='amount' step='.01' name='amount' min='0.01' placeholder='0.01' required></span></div><input type='submit' action='http://localhost/ok' hidden /></div></form></div></body>
+<meta charset='UTF-8'><meta name='viewport' content='width=device-width'><link rel='preconnect' href='https://fonts.googleapis.com'><link rel='preconnect' href='https://fonts.gstatic.com' crossorigin><link href='https://fonts.googleapis.com/css2?family=Overpass:wght@400;700;900&display=swap' rel='stylesheet'><style>body \{ color: #323036; font-family: 'Overpass', sans-serif} form \{ text-align: center} div.container \{ position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%); padding: 0 10px} select \{ border: none; outline: none; background-color: transparent; -moz-appearance: none; -webkit-appearance: none} select:focus \{ border: none; outline: none} input \{ font-weight: 700; font-size: 1em; background-color: transparent; border: none; text-align: center; float: left; width: 80%; -moz-appearance: none; -webkit-appearance: none} input:focus \{ outline: none} input::-webkit-calendar-picker-indicator \{ display: none !important;} dov.accounts \{ text-align: center} div.accounts>div>select \{ font-weight: 900 !important; font-size: 1em; padding-bottom: 0.5em;} div.accounts>div[class^='account'] \{ width: 45%; display: inline-block} div.meta \{ width: 100%} div.meta>div.location>input \{ float: none; font-weight: 400 !important; font-size: 0.9em; text-align: center; padding-bottom: 10px} div.meta>span select, div.meta>span input \{ float: none; font-weight: 400 !important; font-size: 1.2em; width: 45%} div.brand input, div.item input \{ font-size: 1.5em; font-weight: 700; text-align: left; border-bottom: 0.5px solid #E6E6E6; width: 100%} div.quantity \{ width: 100%; margin-bottom: 0.8em; text-align: right} div.quantity>span input#quantity \{ float: none; sans-serif; font-weight: 400 !important; font-size: 1.2em; text-align: right; width: 80%} div.quantity>span span.quantityUnit \{ float: left; width: 20%; font-size: 0.8em} div.costs \{ width: 100%; text-align: right} div.costs>span span.currency \{ float: left; width: 20%} div.costs>span span.currency select \{ font-weight: 900; font-size: 1em} div.costs>span input#amount \{ float: none; sans-serif; font-weight: 900 !important; font-size: 4em; text-align: right; width: 80%; padding-bottom: 10px}</style><body><div class='container'><form method='get' action='http://localhost/ok' name='transactions'><div class='wrapper'><div class='accounts'><div class='accountFrom'><select name='accountFrom' id='accountFrom' size='1' style='text-align:right' required><option value='Revolut Current' selected>Revolut Current </option>{transactionLists["currency"]} </select></div>&nbsp;|&nbsp; <div class='accountTo'><select name='accountTo' id='accountTo' size='1' style='text-align:left' required><option value='Expenses' selected>Expenses</option>{transactionLists["currency"]} </select></div></div><br><br><div class='meta'><div class='location'>📍 <input type='text' name='location' id='location' value='{location}' required><br>📅 <select name='frequency' id='frequency' size='1' style='font-size:small; font-weight: 700'><option value='Once Off' selected>Once off</option>{transactionLists["frequency"]} </select></div><br><span class='type' style='padding-right: 10px'><select name='type' id='type' size='1' style='text-align: right' required><option value='Food' selected>🍽 Food</option>{transactionLists["category"]} </select></span><span>:</span><span class='group' style='padding-left: 10px'><datalist id='subcat'>{transactionLists["subcategory"]} </datalist><input type='text' id='group' name='group' size='3' placeholder='Enter group...' style='text-align: left' autocomplete='off' required /></span></div><br><br><div class='brand'><input type='text' name='brand' id='brand' placeholder='Brand' required></div><br><br><br><div class='item'><input type='text' name='item' id='item' placeholder='Item Name' required></div><br><br><br><div class='quantity'><span class='quantityNumber'><input type='number' id='quantity' step='.01' name='quantity' min='0.01' placeholder='0.00' required></span><span class='quantityUnit'><select name='quantityUnit' size='1' required><option value='x' selected>x</option>{transactionLists["quantityUnit"]} </select></span></div><div class='costs'><span class='currency'><select name='currency' id='currency' size='1'>{transactionLists["currency"]} </select></span><span class='amount'><input type='number' id='amount' step='.01' name='amount' min='0.01' placeholder='0.01' required></span></div><input type='submit' action='http://localhost/ok' hidden /></div></form></div></body>
